set Jackson 3 as internal serde