@@ -6,20 +6,19 @@ import com.arangodb.entity.*;
 import com.arangodb.model.CollectionCreateOptions;
 import com.arangodb.model.GraphCreateOptions;
 import com.arangodb.util.TestUtils;
-import com.fasterxml.jackson.databind.node.JsonNodeFactory;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import jakarta.json.JsonObject;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Named;
 import org.junit.jupiter.params.provider.Arguments;
+import tools.jackson.databind.node.JsonNodeFactory;
+import tools.jackson.databind.node.ObjectNode;
 
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.arangodb.util.TestUtils.TEST_DB;
@@ -33,14 +32,13 @@ public class BaseJunit5 {
 
     private static final ArangoDBVersion version = adb.getVersion();
     private static final ServerRole role = adb.getRole();
-    private static final boolean supportsV8 = supportsV8(adb);
 
     private static final List<Named<ArangoDB>> adbs = Arrays.stream(Protocol.values())
             .map(p -> Named.of(p.toString(), new ArangoDB.Builder()
                     .loadProperties(config)
                     .protocol(p)
                     .build()))
-            .collect(Collectors.toList());
+            .toList();
 
     private static Boolean extendedDbNames;
     private static Boolean extendedNames;
@@ -92,7 +90,7 @@ public class BaseJunit5 {
                 )
                 .build(), ObjectNode.class);
 
-        return response.getBody().get("jwt").textValue();
+        return response.getBody().get("jwt").stringValue();
     }
 
     static ArangoDatabase initDB(String name) {
@@ -214,26 +212,4 @@ public class BaseJunit5 {
     public static boolean isCluster() {
         return role == ServerRole.COORDINATOR;
     }
-
-    public static boolean isEnterprise() {
-        return version.getLicense() == License.ENTERPRISE;
-    }
-
-    public static boolean supportsV8() {
-        return supportsV8;
-    }
-
-    private static boolean supportsV8(ArangoDB adb) {
-        JsonObject v = adb.execute(Request.builder()
-                        .method(Request.Method.GET)
-                        .path("/_api/version")
-                        .queryParam("details", "true")
-                        .build(),
-                JsonObject.class
-        ).getBody();
-        JsonObject details = v.getJsonObject("details");
-        if (!details.containsKey("v8-version")) return false;
-        return !details.getString("v8-version").equals("none");
-    }
-
 }
